# fluentia

./: .gitignore  pyproject.toml
fluentia/: database.py  main.py  settings.py
fluentia/apps/card/: api.py  models.py  schema.py
fluentia/apps/exercises/: api.py  constants.py  models.py  schema.py
fluentia/apps/term/: api.py  constants.py  models.py  schema.py
fluentia/apps/user/: api.py  models.py  schema.py  security.py
fluentia/apps/user/auth/: api.py  schema.py
fluentia/core/api/: constants.py  highlight.py  query.py  schema.py
fluentia/core/model/: shortcut.py
fluentia/tests/: conftest.py  utils.py
fluentia/tests/card/: test_api.py
fluentia/tests/exercises/: test_exercise_event.py
fluentia/tests/factories/: card.py  term.py  user.py
fluentia/tests/term/: test_api.py
fluentia/tests/user/: test_api.py
fluentia/tests/user/auth/: test_api.py
migrations/: env.py
migrations/versions/: 0e07c79e2c18_.py  19ab88016ea3_.py  1bb4ab1d84b8_.py  33e6f277a913_create_card_tables.py  39bc77d7b08d_.py  46f6d22777ee_create_terms_tables.py  4ca484876d7e_.py  505ef8a8142d_create_terms_table.py  71b5cf0168b1_create_user_table.py  8c00ed1fcb2d_.py  ab64594d3d13_.py  b96e10013ddf_create_term_tables.py  c8f9eb59de25_.py  e3d76e7b1c9c_.py  eaf5ed72e907_create_exercises_tables.py  ebcbfd37f951_.py
